# garbage-keytar

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ble_midi.c  ble_midi.h  control.c  control.h  dev_hid_composite.c  display.c  display.h  flake.nix  host_hid.c  keyboard.c  keyboard.h  keytar.code-workspace  main.c  main_device.c  main_host.c  main_host.h  midi-ble.gatt  midi.c  midi.h  midi_ble.c  midi_note_table.h  notes.txt  numblock_cover.scad  offset.c  offset.h  pitchbend.c  pitchbend.h  shell.nix  tusb_config.h  usb_descriptors.c
casemod/: keyboard_cover.scad  numblock_cover.scad  single-key_cover.scad
enclosure/: battery_cover.scad  captive_nut.scad  case.scad  constants.scad  display.scad  head.scad  keyboard.scad  mounting_holes.scad  parts.scad  pcb.scad
enclosure/head/: neck.scad  pitch_wheel.scad
firmware/: CMakeLists.txt  Makefile  adsr.c  adsr.h  battery.c  battery.h  btstack_config.h  compile_flags.txt  config.c  config.h  control.c  control.h  display.c  display.h  firmware.code-workspace  key_positions.h  keyboard.c  keyboard.h  keyboard_matrix.c  keyboard_matrix.h  keyboard_scan_codes.h  main.c  main_device.c  main_host.c  main_host.h  menu.c  menu.h  menu_navigation.c  menu_navigation.h  midi.c  midi.h  midi_ble.c  midi_ble.h  midi_ble_client.c  midi_ble_client.h  midi_note_table.h  midi_uart.c  midi_uart.h  pitchbend.c  pitchbend.h  (+13 more)
firmware/img/: .gitignore  Makefile  overwiew.ase
firmware/menu/: bluetooth.c  bluetooth.h  bluetooth_connect.c  bluetooth_connect.h  envelope.c  envelope.h  keymap.c  keymap.h  main.c  main.h  profiles.c  profiles.h
firmware/pico_w/: CMakeLists.txt  server.c  server_common.c  temp_sensor.gatt
firmware/ui/: menu.c  menu.h  menu_items.c  menu_items.h  stack.c  stack.h  status.c  status.h
firmware/ui/menu/: select.c  select.h
kicad/keytar/: fp-lib-table  keytar-cache.lib  keytar-parts.kicad_sym  keytar-rescue.kicad_sym  keytar.kicad_pcb  keytar.kicad_pcb-bak  keytar.kicad_pro  keytar.kicad_sch  keytar.pro  keytar.sch  keytar.sch-bak  sym-lib-table
kicad/keytar/keyar-parts.pretty/: EB-DIOS M06.kicad_mod
openocd/: with_picoprobe.nix
pcb/keytar/: .gitignore  keytar.kicad_pcb-bak  keytar.kicad_sch  keytar.sch-bak
pcb/keytar/keyar-parts.pretty/: RPi_Pico_debug_hole_USB_SMD_TH.kicad_mod
pico_w/: CMakeLists.txt  server_common.c
